--- a/index.html
+++ b/index.html
@@ -1,177 +1,183 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home work 1</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./ccs/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet">
-  </head>
- 
-  <body class="pages ">
-    <header class="page-header">  
-      <div class="main-nav conteiner">
-        <nav class="nav-content">
-          <a href="" lang="en" class="logo logo-header link"><span class="logo-accent">Web</span>Studio</a>
-          <ul class="naw-list list">
-            <li class="naw-item">
-              <a href="" class="naw-link current link">Студия</a>
-            </li>
-            <li class="naw-item">
-              <a href="./portfolio.html" class="naw-link link">Портфолио</a>
-            </li>
-            <li class="naw-item">
-              <a href="" class="naw-link link">Контакты</a>
-            </li>
-          </ul>
-        </nav>
-        <ul class="info-list list">
-          <li class="info-item">
-            <a href="" lang="en" class="info-link link">info@devstudio.com</a>
-          </li>
-          <li class="info-item list">
-            <a href="" class="info-link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </div>
-    </header>
-    <main> 
-      <!-- Герой -->
-      <section class="hero conteiner">
-        <div class="hero-content">
-          <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
-          <button type="button" class="hero-button">Заказать услугу</button>
-        </div>
-        
-      </section>
-      <!-- Преимущества -->
-      <section class="advantage conteiner">
-        <h2 class="visually-hidden">Наши преимущества</h2>
-        <ul class="advantage-list list">
-          <li class="advantage-item ">
-            <h3 class="advantage-title ">Внимание к деталям</h3>
-            <p class="advantage-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-          </li>
-          <li class="advantage-item">
-            <h3 class="advantage-title">Пунктуальность</h3>
-            <p class="advantage-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="advantage-item">
-            <h3 class="advantage-title">Планирование</h3>
-            <p class="advantage-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="advantage-item">
-            <h3 class="advantage-title">Современные технологии</h3>
-            <p class="advantage-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-          </li>
-        </ul>
-      </section>
-      <!-- Чем занимаемся -->
-      <section class="about conteiner">
-        <h2 class="about-title">Чем мы занимаемся</h2>
-        <ul class="about-list list">
-          <li class="about-item ">
-            <a href=""
-              ><img
-                src="./images/box-1.jpg"
-                alt="Разработчик печатает код"
-                width="370"
-                height="294"
-            /></a>
-          </li>
-          <li class="about-item ">
-            <a href=""
-              ><img
-                src="./images/box-2.jpg"
-                alt="Дизайнер верстает макеты"
-                width="370"
-                height="294"
-            /></a>
-          </li>
-          <li class="about-item ">
-            <a href=""
-              ><img
-                src="./images/box-3.jpg"
-                alt="Дизайнер подбирае цветовую палитру"
-                width="370"
-                height="294"
-            /></a>
-          </li>
-        </ul>
-      </section>
-      <!-- Команда -->
-      <section class="team conteiner">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="team-item">
-            <img
-              src="./images/team-card-1.jpg"
-              alt="Фотография Игоря Демьяненко"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name">Игорь Демьяненко</h3>
-            <p lang="en" class="team-post">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team-card-2.jpg"
-              alt="Фотография Ольги Репиной"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name">Ольга Репина</h3>
-            <p lang="en" class="team-post">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team-card-3.jpg"
-              alt="Фотография Николая Тарасова"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name">Николай Тарасов</h3>
-            <p lang="en" class="team-post">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              src="./images/team-card-4.jpg"
-              alt="Фотография Михаила Ермакова"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-name">Михаил Ермаков</h3>
-            <p lang="en" class="team-post">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer class="footer conteiner">
-      <a href="" lang="en" class="logo logo-footer link"><span class="logo-accent">Web</span>Studio</a>
-      <address class="address">
-        <ul class="address-list list">
-          <li class="address-item">
-            <a href="" class="address-link">Киев, пр-т Леси Украинки, 26</a>
-          </li>
-          <li class="address-item">
-            <a href="mailto:info@devstudio.com" lang="en" class="address-link info link">info@devstudio.com</a>
-          </li>
-          <li class="address-item">
-            <a href="tel:+380961111111" class="address-link info link">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
-    </footer> 
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Home work 1</title>
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+        <link rel="stylesheet" href="./ccs/styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+
+    <body class="pages">
+        <header class="page-header">
+            <div class="main-nav conteiner">
+                <nav class="nav-content">
+                    <a href="" lang="en" class="logo logo-header link"
+                        ><span class="logo-accent">Web</span>Studio</a
+                    >
+                    <ul class="naw-list list">
+                        <li class="naw-item">
+                            <a href="" class="naw-link current link">Студия</a>
+                        </li>
+                        <li class="naw-item">
+                            <a href="./portfolio.html" class="naw-link link">Портфолио</a>
+                        </li>
+                        <li class="naw-item">
+                            <a href="" class="naw-link link">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <ul class="info-list list">
+                    <li class="info-item">
+                        <a href="mailto:info@devstudio.com" lang="en" class="info-link link">info@devstudio.com</a>
+                    </li>
+                    <li class="info-item list">
+                        <a href="tel:+380961111111" class="info-link link">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </div>
+        </header>
+        <main>
+            <!-- Герой -->
+            <section class="section">
+                <div class="main-hero conteiner">
+                    <div class="hero-content">
+                        <h1 class="hero-title">Эффективные решения<br />для вашего бизнеса</h1>
+                        <button type="button" class="hero-button">Заказать услугу</button>
+                    </div>
+                </div>
+            </section>
+            <!-- Преимущества -->
+            <section class="section">
+                <div class="conteiner">
+                    <h2 class="visually-hidden">Наши преимущества</h2>
+                    <ul class="advantage-list list">
+                        <li class="advantage-item">
+                            <h3 class="advantage-title">Внимание к деталям</h3>
+                            <p class="advantage-text">
+                                Идейные соображения, а также начало повседневной работы по
+                                формированию позиции.
+                            </p>
+                        </li>
+                        <li class="advantage-item">
+                            <h3 class="advantage-title">Пунктуальность</h3>
+                            <p class="advantage-text">
+                                Задача организации, в особенности же рамки и место обучения кадров
+                                влечет за собой.
+                            </p>
+                        </li>
+                        <li class="advantage-item">
+                            <h3 class="advantage-title">Планирование</h3>
+                            <p class="advantage-text">
+                                Равным образом консультация с широким активом в значительной степени
+                                обуславливает.
+                            </p>
+                        </li>
+                        <li class="advantage-item">
+                            <h3 class="advantage-title">Современные технологии</h3>
+                            <p class="advantage-text">
+                                Значимость этих проблем настолько очевидна, что реализация плановых
+                                заданий.
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!-- Чем занимаемся -->
+            <section class="section">
+                <div class="main-about conteiner">
+                    <h2 class="about-title">Чем мы занимаемся</h2>
+                    <ul class="about-list list">
+                        <li class="about-item">
+                            <a href="" class="link"
+                                ><img
+                                    src="./images/box-1.jpg"
+                                    alt="Разработчик печатает код"
+                                    width="370"
+                                    height="294"
+                            /></a>
+                        </li>
+                        <li class="about-item">
+                            <a href="" class="link"
+                                ><img
+                                    src="./images/box-2.jpg"
+                                    alt="Дизайнер верстает макеты"
+                                    width="370"
+                                    height="294"
+                            /></a>
+                        </li>
+                        <li class="about-item">
+                            <a href="" class="link"
+                                ><img
+                                    src="./images/box-3.jpg"
+                                    alt="Дизайнер подбирае цветовую палитру"
+                                    width="370"
+                                    height="294"
+                            /></a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!-- Команда -->
+            <section class="section">
+                <div class="main-team conteiner">
+                  <h2 class="team-title">Наша команда</h2>
+                  <ul class="team-list list">
+                    <li class="team-item">
+                      <img src="./images/team-card-1.jpg" alt="Фотография Игоря Демьяненко" width="270" height="260" />
+                      <h3 class="team-name">Игорь Демьяненко</h3>
+                      <p lang="en" class="team-post">Product Designer</p>
+                    </li>
+                    <li class="team-item">
+                      <img src="./images/team-card-2.jpg" alt="Фотография Ольги Репиной" width="270" height="260" />
+                      <h3 class="team-name">Ольга Репина</h3>
+                      <p lang="en" class="team-post">Frontend Developer</p>
+                    </li>
+                    <li class="team-item">
+                      <img src="./images/team-card-3.jpg" alt="Фотография Николая Тарасова" width="270" height="260" />
+                      <h3 class="team-name">Николай Тарасов</h3>
+                      <p lang="en" class="team-post">Marketing</p>
+                    </li>
+                    <li class="team-item">
+                      <img src="./images/team-card-4.jpg" alt="Фотография Михаила Ермакова" width="270" height="260" />
+                      <h3 class="team-name">Михаил Ермаков</h3>
+                      <p lang="en" class="team-post">UI Designer</p>
+                    </li>
+                  </ul>
+                </div>
+            </section>
+        </main>
+        <footer >
+          <div class="footer conteiner">
+            <a href="" lang="en" class="logo logo-footer link"><span class="logo-accent">Web</span>Studio</a>
+            <address class="address">
+              <ul class="address-list list">
+                <li class="address-item">
+                  <a href="" class="address-link link">Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li class="address-item">
+                  <a href="mailto:info@devstudio.com" lang="en" class="address-link info link">info@devstudio.com</a>
+                </li>
+                <li class="address-item">
+                  <a href="tel:+380961111111" class="address-link info link">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </div>
+            
+        </footer>
+    </body>
 </html>
