--- a/portfolio.html
+++ b/portfolio.html
@@ -30,77 +30,79 @@
             </nav>
             <ul class="info-list list">
                 <li class="info-item">
-                    <a href="" lang="en" class="info-link link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" lang="en" class="info-link link">info@devstudio.com</a>
                 </li>
                 <li class="info-item list">
-                    <a href="" class="info-link">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="info-link link">+38 096 111 11 11</a>
                 </li>
             </ul>
         </div>
     </header>
 <main>
-    <section class="main-project conteiner">
-        <h1 class="visually-hidden">Наши проэкты</h1>
-        <!-- Направления проєктов -->
-        <div class="filter">
-            <h2 class="filter-title visually-hidden">Направления проєктов</h2>
-            <button type="button" class="filter-button">Все</button>
-            <button type="button" class="filter-button">Веб-сайты</button>
-            <button type="button" class="filter-button">Приложения</button>
-          <button type="button" class="filter-button">Дизайн</button>
-            <button type="button" class="filter-button">Маркетинг</button>
-        </div>
-        <div class="project">
-            <h2 class="project-title visually-hidden">Список проєктов</h2>
-            <ul class="project-list list">
-                <li class="project-item">
-                    <img src="./images/portfolio/project-1.jpg" alt="Макет рабочего сайта" width="370" height="294">
-                    <h3 class="project-name">Технокряк</h3>
-                    <p class="project-type">Веб-сайт</p>
-                </li>
-                <li class="project-item">
-                    <img src="./images/portfolio/project-2.jpg" alt="Постер на ктором Играют в баскетбол" width="370"
-                        height="294">
-                    <h3 class="project-name">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
-                    <p class="project-type">Дизайн</p>
-                </li>
-                <li class="project-item">
-                    <img src="./images/portfolio/project-3.jpg" alt="Логотип приложения" width="370" height="294">
-                    <h3 class="project-name">Ресторан <span lang="en">Seafood</span></h3>
-                    <p class="project-type">Приложение</p>
-                </li>
-                <li class="project-item">
-                    <img src="./images/portfolio/project-4.jpg" alt="Наушники" width="370" height="294">
-                    <h3 class="project-name">Проект <span lang="en">Prime</span></h3>
-                    <p class="project-type">Маркетинг</p>
-                </li>
-                <li class="project-item">
-                    <img src="./images/portfolio/project-5.jpg" alt="Две коробки" width="370" height="294">
-                    <h3 class="project-name">Проект <span lang="en">Boxes</span></h3>
-                    <p class="project-type">Приложение</p>
-                </li>
-                <li class="project-item">
-                    <img src="./images/portfolio/project-6.jpg" alt="Макет рабочего сайта" width="370" height="294">
-                    <h3 lang="en" class="project-name">Inspiration has no Borders</h3>
-                    <p class="project-type">Веб-сайт</p>
-                </li>
-                <li class="project-item">
-                    <img src="./images/portfolio/project-7.jpg" alt="Разворот книги с изображениями" width="370" height="294">
-                    <h3 class="project-name">Издание <span lang="en">Limited Edition</span></h3>
-                    <p class="project-type">Дизайн</p>
-                </li>
-                <li class="project-item">
-                    <img src="./images/portfolio/project-8.jpg" alt="Бирка с надписью" width="370" height="294">
-                    <h3 class="project-name">Проект <span lang="en">LAB</span></h3>
-                    <p class="project-type">Маркетинг</p>
-                </li>
-                <li class="project-item">
-                    <img src="./images/portfolio/project-9.jpg" alt="Ноутбук с открытм приложением" width="370" height="294">
-                    <h3 lang="en" class="project-name">Growing Business</h3>
-                    <p class="project-type">Приложение</p>
-                </li>
-            </ul>
-        </div>
+    <section class="section">
+       <div class="main-project conteiner">
+            <h1 class="visually-hidden">Наши проэкты</h1>
+            <!-- Направления проєктов -->
+            <div class="filter">
+                <h2 class="filter-title visually-hidden">Направления проєктов</h2>
+                <button type="button" class="filter-button">Все</button>
+                <button type="button" class="filter-button">Веб-сайты</button>
+                <button type="button" class="filter-button">Приложения</button>
+                <button type="button" class="filter-button">Дизайн</button>
+                <button type="button" class="filter-button">Маркетинг</button>
+            </div>
+            <div class="project">
+                <h2 class="project-title visually-hidden">Список проєктов</h2>
+                <ul class="project-list list">
+                    <li class="project-item">
+                        <img src="./images/portfolio/project-1.jpg" alt="Макет рабочего сайта" width="370" height="294">
+                        <h3 class="project-name">Технокряк</h3>
+                        <p class="project-type">Веб-сайт</p>
+                    </li>
+                    <li class="project-item">
+                        <img src="./images/portfolio/project-2.jpg" alt="Постер на ктором Играют в баскетбол" width="370"
+                            height="294">
+                        <h3 class="project-name">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
+                        <p class="project-type">Дизайн</p>
+                    </li>
+                    <li class="project-item">
+                        <img src="./images/portfolio/project-3.jpg" alt="Логотип приложения" width="370" height="294">
+                        <h3 class="project-name">Ресторан <span lang="en">Seafood</span></h3>
+                        <p class="project-type">Приложение</p>
+                    </li>
+                    <li class="project-item">
+                        <img src="./images/portfolio/project-4.jpg" alt="Наушники" width="370" height="294">
+                        <h3 class="project-name">Проект <span lang="en">Prime</span></h3>
+                        <p class="project-type">Маркетинг</p>
+                    </li>
+                    <li class="project-item">
+                        <img src="./images/portfolio/project-5.jpg" alt="Две коробки" width="370" height="294">
+                        <h3 class="project-name">Проект <span lang="en">Boxes</span></h3>
+                        <p class="project-type">Приложение</p>
+                    </li>
+                    <li class="project-item">
+                        <img src="./images/portfolio/project-6.jpg" alt="Макет рабочего сайта" width="370" height="294">
+                        <h3 lang="en" class="project-name">Inspiration has no Borders</h3>
+                        <p class="project-type">Веб-сайт</p>
+                    </li>
+                    <li class="project-item">
+                        <img src="./images/portfolio/project-7.jpg" alt="Разворот книги с изображениями" width="370" height="294">
+                        <h3 class="project-name">Издание <span lang="en">Limited Edition</span></h3>
+                        <p class="project-type">Дизайн</p>
+                    </li>
+                    <li class="project-item">
+                        <img src="./images/portfolio/project-8.jpg" alt="Бирка с надписью" width="370" height="294">
+                        <h3 class="project-name">Проект <span lang="en">LAB</span></h3>
+                        <p class="project-type">Маркетинг</p>
+                    </li>
+                    <li class="project-item">
+                        <img src="./images/portfolio/project-9.jpg" alt="Ноутбук с открытм приложением" width="370" height="294">
+                        <h3 lang="en" class="project-name">Growing Business</h3>
+                        <p class="project-type">Приложение</p>
+                    </li>
+                </ul>
+            </div>
+       </div>
     </section>
 </main>
     <footer class="footer conteiner">
@@ -108,7 +110,7 @@
         <address class="address">
             <ul class="address-list list">
                 <li class="address-item">
-                    <a href="" class="address-link">Киев, пр-т Леси Украинки, 26</a>
+                    <a href="" class="address-link link">Киев, пр-т Леси Украинки, 26</a>
                 </li>
                 <li class="address-item">
                     <a href="mailto:info@devstudio.com" lang="en" class="address-link info link">info@devstudio.com</a>
@@ -119,6 +121,5 @@
             </ul>
         </address>
     </footer>
- 
-</body>
+ </body>
 </html>
